# solana-bank-workshop

./: .gitignore  README.md
app/: .gitignore  package-lock.json  package.json
app/.next/: react-loadable-manifest.json  trace
app/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json
app/.next/server/pages/: _app.js  _document.js  _error.js  index.js
app/.next/static/chunks/: amp.js  src_components_WalletButton_tsx.js  webpack.js
app/.next/static/webpack/: 7a9f079184cd8f6b.webpack.hot-update.json  amp.1bdd718f300a62d5.hot-update.js  main.1bdd718f300a62d5.hot-update.js  src_components_WalletButton_tsx.0024621a689dcc51.hot-update.js  src_components_WalletButton_tsx.094ffe9ee2d2f4fc.hot-update.js  src_components_WalletButton_tsx.1ac68278288e064f.hot-update.js  src_components_WalletButton_tsx.2b982e56968ee09d.hot-update.js  webpack.0024621a689dcc51.hot-update.js  (+85 more)
app/src/components/: ActionBox.tsx  Navbar.tsx  WalletButton.tsx
app/src/contexts/: walletContext.tsx
app/src/pages/: _app.tsx  dashboard.tsx  index.tsx
app/src/styles/: globals.css
app/src/util/: constants.ts  helper.ts  idl.ts
program/: Anchor.toml  package.json
program/programs/bank-simulator/: Cargo.toml
program/programs/bank-simulator/src/: errors.rs  lib.rs  state.rs
program/programs/bank-simulator/src/instructions/: add_interest.rs  deposit.rs  initialize_account.rs  mod.rs  remove_account.rs  withdraw.rs
program/programs/program/: Cargo.toml
program/programs/program/src/: lib.rs
program/tests/: bank.ts  program.ts
(+70 files in other folders)
