[package]
name = "bank-simulator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bank_simulator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
clockwork-sdk = "2.0.17"
anchor-lang ={version="0.27.0",  features = ["init-if-needed"]}
solana-program = "=1.14.16"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
arrayref = "0.3.7"
